@@ -9,6 +9,7 @@ TODO:
  * Added new --remove-defaults option when generating settings files.
    nscp settings --remove-defaults --generate
  * Added new module SimpleFileWriter for writing passive check results to files.
+ * Fixed issues here and there (mainly new filtering for CheckLogFile)
 
 2012-10-14 MickeM
  * Added support for real-time log file checks (Linux)
